--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,10 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.0.0
 Imports: 
+  qs,
   readxl,
   targets,
-  usethis
+  tidyr,
+  usethis,
+  visNetwork
   
