update description file

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,13 @@
 Package: analyses_RC
-Title: What the Package Does (One Line, Title Case)
+Title: Reef Check in Reunion and Mayotte islands
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+    Clément Delamare
+Description: Reef check is a world citizen survey of corals reef. 
+Because of participation of non-scientist, survey entered into the database are often non-normalize.
+This can have the effect of undermining the credibility of the method.
+The aim of the project is to homogenize data to produce same outputs 
+between Reunion and Mayotte islands surveys, transparent and reproducible results.
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
 Encoding: UTF-8
