update script in more reproductive way

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: analyses_RC
 Title: Reef Check in Reunion and Mayotte islands
 Version: 0.0.0.9000
-Authors@R: 
-    Clément Delamare
+Authors@R: person("Clément Delamare", role = "aut", 
+            email = "clement.delamare@live.fr")
 Description: Reef check is a world citizen survey of corals reef. 
              Because of participation of non-scientist, survey entered into 
              the database are often non-normalize.
