--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: analyse.RC
+Package: analyse_RC
 Title: Reef Check in Reunion and Mayotte islands
 Version: 0.0.0.9000
 Authors@R: person("Clément", "Delamare", role = c("aut", "cre"), 
