--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,13 +15,17 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.0.0
 Imports: 
+  ade4,
+  factoextra,
   forcats,
   ggplot2,
   ggpubr,
   ggspatial,
+  performance,
   plotrix,
   qs,
   readxl,
+  see,
   sf,
   tarchetypes,
   targets,
