--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: analyse_RC
-Title: Reef Check in Reunion and Mayotte islands
+Title: Reef Check on Mayotte island
 Version: 0.0.0.9000
 Authors@R: person("Clément", "Delamare", role = c("aut", "cre"), 
             email = "clement.delamare@live.fr")
 Description: Reef check is a world citizen survey of corals reef. 
-             Because of participation of non-scientist, survey entered into 
-             the database are often non-normalize.
-             This can have the effect of undermining the credibility of the method.
-             The aim of the project is to homogenize data to produce same outputs 
-             between Reunion and Mayotte islands surveys, transparent and reproducible results.
+             Because of participation of non-scientist, the survey entered into 
+             the database are often non-standardized.
+             This can undermine the credibility of the method.
+             The aim of the project is to homogenize the data in order to produce 
+             the same transparent and reproducible results between years on the island of Mayotte.
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
 Encoding: UTF-8
@@ -16,12 +16,14 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.0.0
 Imports: 
   ade4,
+  devtools,
   factoextra,
   forcats,
   ggplot2,
   ggpubr,
   ggspatial,
   performance,
+  paletteer,
   plotrix,
   qs,
   readxl,
