--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,11 +14,12 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.0.0
 Imports: 
+  cowplot,
   devtools,
+  dplyr,
   forcats,
   glue,
   ggplot2,
-  ggpubr,
   ggspatial,
   here,
   lubridate,
@@ -27,12 +28,11 @@ Imports:
   quarto,
   qs,
   readxl,
-  see,
+  scales,
   sf,
   stringr,
   tarchetypes,
   targets,
   tidyr,
   usethis,
-  visNetwork,
-  yaml
+  visNetwork
